# k8s-openapi

./: .gitignore  .mailmap  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  azure-pipelines.yml  build.rs  clippy.toml  devenv.sh  index.html  test.sh
k8s-openapi/: Cargo.toml  README.md  build.rs
k8s-openapi-codegen/: Cargo.toml  README.md
k8s-openapi-codegen-common/: Cargo.toml  README.md  clippy.toml
k8s-openapi-codegen-common/src/: lib.rs
k8s-openapi-codegen-common/src/swagger20/: definitions.rs  info.rs  mod.rs  paths.rs
k8s-openapi-codegen-common/src/templates/: impl_deserialize.rs  impl_listable_resource.rs  impl_metadata.rs  impl_resource.rs  impl_schema.rs  impl_schema08.rs  impl_serialize.rs  int_or_string.rs  json_schema_props_or.rs  mod.rs  newtype.rs  newtype_time.rs  operation_response_common.rs  operation_response_delete.rs  operation_response_other.rs  operation_response_watch.rs  patch.rs  quantity.rs  query_string_optional.rs  schema.rs  struct.rs  struct_deep_merge.rs  type_alias.rs  type_header.rs  watch_event.rs
k8s-openapi-codegen-common/templates/: dsl_field_append_from.rs  dsl_field_insert_from.rs  dsl_field_insert_with.rs  dsl_field_opt.rs  dsl_field_opt_append_from.rs  dsl_field_opt_insert_from.rs  dsl_field_opt_insert_with.rs  dsl_field_opt_push_with.rs  dsl_field_opt_set.rs  dsl_field_opt_set_with.rs  dsl_field_push_with.rs  dsl_field_set.rs  dsl_field_set_with.rs  impl_deserialize.rs  impl_listable_resource.rs  impl_metadata.rs  impl_resource.rs  impl_schema.rs  impl_schema08.rs  impl_serialize.rs  int_or_string.rs  json_schema_props_or.rs  newtype.rs  newtype_time.rs  operation_response_common.rs  operation_response_delete.rs  operation_response_other.rs  operation_response_watch.rs  patch.rs  quantity.rs  query_string_optional.rs  struct.rs  struct_deep_merge.rs  type_alias.rs  type_header.rs  watch_event.rs  watch_event_bookmark_object.rs
k8s-openapi-codegen/src/: fixups.rs  logger.rs  main.rs  supported_version.rs
k8s-openapi-codegen/src/fixups/: mod.rs  special.rs  upstream_bugs.rs
k8s-openapi-codegen/src/swagger20/: definitions.rs  info.rs  mod.rs  paths.rs
k8s-openapi-derive/: Cargo.toml  README.md
k8s-openapi-derive/src/: custom_resource_definition.rs  lib.rs
k8s-openapi-tests/: Cargo.toml  README.md  build.rs  test.sh
k8s-openapi-tests-macro-deps/: Cargo.toml  README.md  build.rs
k8s-openapi-tests-macro-deps/src/: lib.rs
k8s-openapi-tests/cluster-configs/: v1.30.yaml
k8s-openapi-tests/src/: api_versions.rs  client_openssl.rs  client_winapi.rs  custom_resource_definition.rs  deep_merge.rs  deployment.rs  deserialize_leniency.rs  job.rs  lib.rs  logs.rs  patch.rs  pod.rs  resource.rs  special_idents.rs  time.rs  watch_event.rs
k8s-openapi-tests/src/clientset/: create.rs  delete.rs  delete_collection.rs  list.rs  mod.rs  patch.rs  read.rs  watch.rs
k8s-openapi-tests/test-replays/: README.md
k8s-openapi-tests/test-replays/v1-10/: api_versions-list.json  custom_resource_definition-create.json  custom_resource_definition-test.json  deployment-list.json  job-create.json  logs-get.json  patch-deployment.json  pod-list.json  watch_event-watch_pods.json
k8s-openapi-tests/test-replays/v1-11/: api_versions-list.json  custom_resource_definition-create.json  custom_resource_definition-test.json  deployment-list.json  job-create.json  logs-get.json  patch-deployment.json  pod-list.json  watch_event-watch_pods.json
k8s-openapi-tests/test-replays/v1-12/: api_versions-list.json  custom_resource_definition-create.json  custom_resource_definition-test.json  deployment-list.json  job-create.json  logs-get.json  patch-deployment.json  pod-list.json  watch_event-watch_pods.json
k8s-openapi-tests/test-replays/v1-13/: api_versions-list.json  custom_resource_definition-create.json  custom_resource_definition-test.json  deployment-list.json  job-create.json  logs-get.json  patch-deployment.json  pod-list.json  watch_event-watch_pods.json
k8s-openapi-tests/test-replays/v1-14/: api_versions-list.json  custom_resource_definition-create.json  custom_resource_definition-test.json  deployment-list.json  job-create.json  logs-get.json  patch-deployment.json  pod-list.json  watch_event-watch_pods.json
k8s-openapi-tests/test-replays/v1-15/: api_versions-list.json  custom_resource_definition-test.json  deployment-list.json  job-create.json  logs-get.json  patch-deployment.json  pod-list.json  watch_event-watch_pods.json
k8s-openapi-tests/test-replays/v1-16/: api_versions-list.json  custom_resource_definition-test.json  deployment-list.json  job-create.json  logs-get.json  patch-deployment.json  pod-list.json  watch_event-watch_pods.json
k8s-openapi-tests/test-replays/v1-17/: custom_resource_definition-test.json  deployment-list.json  job-create.json  logs-get.json  patch-deployment.json  pod-list.json  watch_event-watch_pods.json
k8s-openapi-tests/test-replays/v1-18/: api_versions-list.json  custom_resource_definition-test.json  deployment-list.json  job-create.json  logs-get.json  patch-deployment.json  pod-list.json  watch_event-watch_pods.json
k8s-openapi-tests/test-replays/v1-19/: api_versions-list.json  custom_resource_definition-test.json  deployment-list.json  job-create.json  logs-get.json  patch-deployment.json  pod-list.json  watch_event-watch_pods.json
k8s-openapi-tests/test-replays/v1-20/: api_versions-list.json  custom_resource_definition-test.json  deployment-list.json  job-create.json  logs-get.json  patch-deployment.json  pod-list.json  watch_event-watch_pods.json
k8s-openapi-tests/test-replays/v1-21/: api_versions-list.json  custom_resource_definition-test.json  deployment-list.json  job-create.json  logs-get.json  patch-deployment.json  pod-list.json  watch_event-watch_pods.json
k8s-openapi-tests/test-replays/v1-22/: api_versions-list.json  custom_resource_definition-test.json  deployment-list.json  job-create.json  logs-get.json  patch-deployment.json  pod-list.json  watch_event-watch_pods.json
k8s-openapi-tests/test-replays/v1-23/: api_versions-list.json  (+7 more)
k8s-openapi/src/: lib.rs
(+59364 files in other folders)
