[package]
name = "k8s-openapi-codegen-common"
version = "0.12.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
categories = ["api-bindings", "web-programming::http-client"]
description = "Common code for the k8s-openapi code generator and k8s-openapi-derive"
documentation = "https://arnavion.github.io/k8s-openapi/v0.12.x/k8s_openapi_codegen_common/"
edition = "2018"
keywords = ["client", "kubernetes", "k8s", "http"]
readme = "README.md"
repository = "https://github.com/Arnavion/k8s-openapi"
include = [
	"Cargo.toml",
	"LICENSE",
	"README.md",
	"src/**/*",
	"templates/**/*",
]

[dependencies]
http = "0.2"
serde = { version = "1", features = ["derive", "rc"], optional = true }
serde_json = { version = "1", optional = true }
regex = { version = "1", optional = true }

[features]
schema = ["serde_json", "regex"]
