[package]
name = "k8s-openapi-codegen-common"
version = "0.21.0"
license = "Apache-2.0"
authors = ["Arnav Singh <me@arnavion.dev>"]
categories = ["api-bindings", "web-programming::http-client"]
description = "Common code for the k8s-openapi code generator and k8s-openapi-derive"
documentation = "https://arnavion.github.io/k8s-openapi/v0.21.x/k8s_openapi_codegen_common/"
edition = "2021"
keywords = ["client", "kubernetes", "k8s", "http"]
readme = "README.md"
repository = "https://github.com/Arnavion/k8s-openapi"
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/**/*",
    "templates/**/*",
]

[dependencies]
serde = { version = "1", optional = true, default-features = false, features = [
    "derive", # for #[derive(serde::Deserialize, serde::Serialize)]
    "rc", # for Arc<Parameter>: serde::Deserialize
] }
