[package]
name = "k8s-openapi-codegen"
version = "0.1.0"
authors = ["Arnavion <me@arnavion.dev>"]
publish = false
edition = "2018"

[dependencies]
backtrace = { version = "0.3", default-features = false, features = [
	"std", # for backtrace::Backtrace
] }
clap = { version = "3", default-features = false, features = [
	"derive", # for #[derive(clap::Parser)]
	"std", # "`std` feature is currently required to build `clap`"
] }
env_logger = { version = "0.9", default-features = false }
http = { version = "0.2", default-features = false }
k8s-openapi-codegen-common = { path = "../k8s-openapi-codegen-common", features = [
	"serde", # to parse OpenAPI specs from JSON files
] }
log = { version = "0.4", default-features = false }
reqwest = { version = "0.11", default-features = false, features = [
	"blocking", # for reqwest::blocking
	"default-tls", # for TLS support
	"json", # for reqwest::blocking::Response::json
] }
serde = { version = "1", default-features = false }
serde_derive = { version = "1", default-features = false }
