[package]
name = "k8s-openapi-codegen"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2021"
publish = false

[dependencies]
clap = { version = "4", default-features = false, features = [
    "derive", # for #[derive(clap::Parser)]
    "std", # "`std` feature is currently required to build `clap`"
] }
env_logger = { version = "0.11", default-features = false }
futures-util = { version = "0.3", default-features = false, features = [
    "alloc", # for futures_util::stream::FuturesUnordered
] }
k8s-openapi-codegen-common = { path = "../k8s-openapi-codegen-common", features = [
    "serde", # to parse OpenAPI specs from JSON files
] }
log = { version = "0.4", default-features = false }
reqwest = { version = "0.13", default-features = false, features = [
    "rustls", # for TLS support
    "json", # for reqwest::Response::json
] }
serde = { version = "1", default-features = false, features = [
    "derive",
] }
serde_json = { version = "1", default-features = false, features = [
    "alloc", # "serde_json requires that either `std` (default) or `alloc` feature is enabled"
] }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt", # for tokio::task::spawn_blocking
] }
url = { version = "2", default-features = false }
