[package]
name = "k8s-openapi-derive"
version = "0.9.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
categories = ["api-bindings", "web-programming::http-client"]
description = "Custom derives for the Kubernetes client API"
documentation = "https://arnavion.github.io/k8s-openapi/v0.9.x/k8s_openapi_derive/"
edition = "2018"
keywords = ["client", "kubernetes", "k8s", "http"]
readme = "README.md"
repository = "https://github.com/Arnavion/k8s-openapi"
include = [
	"Cargo.toml",
	"LICENSE",
	"README.md",
	"src/**/*",
]

[dependencies]
http = "0.2"
k8s-openapi-codegen-common = { version = "=0.9.0", path = "../k8s-openapi-codegen-common" }
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits"] }

[lib]
proc-macro = true
