[package]
name = "k8s-openapi-derive"
version = "0.23.0"
license = "Apache-2.0"
authors = ["Arnav Singh <me@arnavion.dev>"]
categories = ["api-bindings", "web-programming::http-client"]
description = "Custom derives for the Kubernetes client API"
documentation = "https://arnavion.github.io/k8s-openapi/v0.23.x/k8s_openapi_derive/"
edition = "2021"
keywords = ["client", "kubernetes", "k8s", "http"]
readme = "README.md"
repository = "https://github.com/Arnavion/k8s-openapi"
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/**/*",
]

[dependencies]
k8s-openapi-codegen-common = { version = "=0.23.0", path = "../k8s-openapi-codegen-common" }
proc-macro2 = { version = "1", default-features = false, features = ["proc-macro"] }
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = [
    "derive", # minimal feature for writing custom derives
    "parsing", # for syn::parse2, syn::Attribute::parse_args_with, syn::Path::is_ident
    "printing", # for syn types: quote::ToTokens
] }

[lib]
proc-macro = true
