[package]
name = "k8s-openapi-tests-macro-deps"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2021"
publish = false
include = [
    "build.rs",
    "Cargo.toml",
    "src/**/*",
]

[dependencies]
k8s-openapi = { path = ".." }
k8s-openapi-derive = { path = "../k8s-openapi-derive" }

[features]
test_v1_26 = ["k8s-openapi/v1_26"]
test_v1_27 = ["k8s-openapi/v1_27"]
test_v1_28 = ["k8s-openapi/v1_28"]
test_v1_29 = ["k8s-openapi/v1_29"]
test_v1_30 = ["k8s-openapi/v1_30"]
test_v1_31 = ["k8s-openapi/v1_31"]
test_v1_32 = ["k8s-openapi/v1_32"]
