[package]
name = "k8s-openapi-tests-macro-deps"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2021"
publish = false
include = [
    "build.rs",
    "Cargo.toml",
    "src/**/*",
]

[dependencies]
k8s-openapi = { path = "..", default-features = false, features = ["schemars"] }
k8s-openapi-derive = { path = "../k8s-openapi-derive" }
schemars = { version = "1", default-features = false, features = [
    "derive", # for #[derive(schemars::JsonSchema)]
] }

[features]
test_v1_30 = ["k8s-openapi/v1_30"]
test_v1_31 = ["k8s-openapi/v1_31"]
test_v1_32 = ["k8s-openapi/v1_32"]
test_v1_33 = ["k8s-openapi/v1_33"]
