[package]
name = "k8s-openapi"
version = "0.1.0"
authors = ["Arnavion <arnavion@gmail.com>"]

[dependencies]
base64 = "0.9.x"
bytes = "0.4.x"
chrono = { version = "0.4.x", features = ["serde"] }
http = "0.1.x"
serde = "1.0.x"
serde_json = "1.0.x"
url = "1.7.x"

[features]
v1_7 = []
v1_8 = []
v1_9 = []
v1_10 = []
v1_11 = []

[package.metadata.docs.rs]
features = ["v1_7", "v1_8", "v1_9", "v1_10", "v1_11"]
