[package]
name = "k8s-openapi"
version = "0.3.0"
license = "Apache-2.0"
authors = ["Arnavion <arnavion@gmail.com>"]
categories = ["api-bindings", "web-programming::http-client"]
description = "Bindings for the Kubernetes client API"
documentation = "https://docs.rs/k8s-openapi"
edition = "2018"
keywords = ["client", "kubernetes", "k8s", "http"]
readme = "README.md"
repository = "https://github.com/Arnavion/k8s-openapi-codegen"

[dependencies]
base64 = "0.9.x"
bytes = "0.4.x"
chrono = { version = "0.4.x", features = ["serde"] }
http = "0.1.x"
serde = "1.0.x"
serde_json = "1.0.x"
url = "1.7.x"

[features]
# Each feature corresponds to a supported version of Kubernetes
v1_8 = []
v1_9 = []
v1_10 = []
v1_11 = []
v1_12 = []
v1_13 = []

# Only used to build docs
dox = []

[package.metadata.docs.rs]
features = ["dox"]
